<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Idade Appp</string>
    <string name="nome">Nome</string>
    <string name="hint_nome">Digite o seu nome</string>
    <string name="erroIdade">idade invalida</string>
    <string name="fechar">Fechar</string>
    <string name="idade">Idade</string>
    <string name="hint_idade">Digite a sua idade</string>
    <string name="verificar">Verificar</string>
    <string name="erro_nome">Nome Invalido</string>
    <string name="fechando_app">Fechando App</string>
    <string name="realmente_fechar_app">Deseja realmente fechar o APP?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
</resources>
